# mai

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  deps.yml  key-boundle-test.cc
benchmark/: benchmark-main.cc
include/mai/: allocator.h  at-exit.h  db.h  env.h  error.h  handle.h  helper.h  isolate.h  iterator.h  options.h  proxied-db.h  transaction-db.h  transaction.h  type-defs.h  value.h  write-batch.h
include/mai-lang/: arguments.h  call-info.h  handles.h  isolate.h  nyaa.h  values.h
include/mai-sql/: mai-sql.h  options.h  result-set.h
include/my/: README
mai/: main.cpp
mai-framework/: Info.plist
mai.xcodeproj/: project.pbxproj
mai.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
scripts/: find-all-sources.sh
src/: allocator.h  error-test.cc  error.h
src/asm/: utils.h
src/base/: allocators.h  arena-test.cc  arena-utils-test.cc  arena-utils.cc  arena-utils.h  arena.cc  arena.h  arenas-test.cc  arenas.cc  arenas.h  at-exit.cc  base-test.cc  base.cc  base.h  big-number.cc  big-number.h  bit-ops.h  crc32.c  ebr-test.cc  ebr.cc  ebr.h  hash.cc  hash.h  io-utils-test.cc  io-utils.h  lazy-instance.h  lock-group.cc  lock-group.h  queue-macros.h  reference-count-test.cc  reference-count.h  scoped-arena-test.cc  scoped-arena.cc  scoped-arena.h  sha256-test.cc  sha256.c  slice-test.cc  slice.cc  slice.h  spin-locking-test.cc  (+11 more)
src/bw/: bw-nodes.cc  bw-nodes.h  bw-tree.h  mapping-table.cc  mapping-table.h
src/core/: bw-tree-memory-table-test.cc  bw-tree-memory-table.cc  bw-tree-memory-table.h  bw-tree-test.cc  bw-tree.h  bytewise-comparator.cc  decimal-test-v1.cc  decimal-test-v2.cc  decimal-v1.cc  decimal-v1.h  decimal-v2.cc  decimal-v2.h  delta-amend-iterator.cc  delta-amend-iterator.h  env.cc  error-test.cc  error.cc  hash-map-test.cc  hash-map-v1-test.cc  hash-map-v1.h  hash-map-v2-test.cc  hash-map-v2.h  hash-map.h  internal-iterator.cc  internal-iterator.h  internal-key-comparator.cc  internal-key-comparator.h  iterator-warpper.cc  iterator-warpper.h  iterator.cc  key-boundle-test.cc  key-boundle.cc  key-boundle.h  key-filter.h  lru-cache-test.cc  lru-cache-v1.cc  lru-cache-v1.h  memory-table.cc  memory-table.h  merging-test.cc  (+12 more)
src/db/: column-family.cc  column-family.h  compaction-impl.cc  compaction-impl.h  compaction-test.cc  compaction.h  config-test.cc  config.cc  config.h  db-impl-test.cc  db-impl.cc  db-impl.h  db-iterator.cc  db-iterator.h  factory.cc  factory.h  files-test.cc  files.cc  files.h  optimism-transaction-db.cc  optimism-transaction-db.h  optimism-transaction.cc  optimism-transaction.h  snapshot-impl.h  table-cache.cc  table-cache.h  transaction-db-test.cc  transaction-db.cc  version-test.cc  version.cc  version.h  write-ahead-log.cc  write-ahead-log.h  write-batch-with-index-test.cc  write-batch-with-index.cc  write-batch-with-index.h  write-batch.cc
src/lang/: ast.cc  ast.h  bytecode-array-builder.cc  bytecode-array-builder.h  bytecode-generator-test.cc  bytecode-generator.cc  bytecode-generator.h  bytecode-test.cc  bytecode.cc  bytecode.h  channel-test.cc  channel.cc  channel.h  compilation-worker-test.cc  compilation-worker.cc  compilation-worker.h  compiler-test.cc  compiler.cc  compiler.h  coroutine-test.cc  coroutine.cc  coroutine.h  factory.cc  factory.h  function-template-x64.cc  garbage-collector-test.cc  garbage-collector.cc  garbage-collector.h  handle-test.cc  handle.cc  handle.h  heap.cc  heap.h  hir-graph-generator.cc  hir-reducer-test.cc  hir-reducer.cc  hir-reducer.h  hir-reducers.cc  hir-reducers.h  hir-schedule-test.cc  (+74 more)
src/mai/: allocator.h  comparator.h  db.h  env.h  error-test.cc  error.h  file-test.cc  helper.h  iterator.h  options.h  test-main.cc  transaction-db.h  transaction.h  writable-file-test.cc  write-batch.h
src/my/: types.h
src/nyaa/: .gitignore  aot-generator-visitor-x64.cc  aot-generator-x64.cc  api-test.cc  api.cc  arguments.cc  ast.cc  ast.h  builtin-code-x64.cc  builtin.cc  builtin.h  bytecode-builder.cc  bytecode-builder.h  bytecode-generator-visitor.cc  bytecode-generator.cc  bytecode.cc  bytecode.h  code-gen-base.cc  code-gen-base.h  code-gen-test.cc  code-gen-utils.cc  code-gen-utils.h  code-gen.cc  code-gen.h  code-generator-x64.cc  function.cc  function.h  handles-test.cc  handles.cc  heap-object-factory.cc  heap.cc  heap.h  high-level-ir-test.cc  high-level-ir.cc  high-level-ir.h  hir-generator-visitor.cc  hir-generator.cc  hir-passes-test.cc  hir-passes.cc  hir-passes.h  (+65 more)
src/port/: env-posix.cc  file-posix.cc  file-posix.h  file-test.cc  tls-posix.h
src/sql/: ast-factory-test.cc  ast-factory.cc  ast-factory.h  ast-nodes.cc  ast-nodes.h  ast-visitor.h  ast.cc  ast.h  config.h  const.py  decimal-test-v1.cc  decimal-test-v2.cc  decimal-test.cc  decimal-v1.cc  decimal-v1.h  decimal-v2.cc  decimal-v2.h  decimal.cc  decimal.h  eval-factory.h  evaluation-test.cc  evaluation.cc  evaluation.h  form-schema-test.cc  form-schema.cc  form-schema.h  heap-tuple-test.cc  heap-tuple.cc  heap-tuple.h  lex.yy.c  mai-sql-connection-impl.cc  mai-sql-connection-impl.h  mai-sql-impl.cc  mai-sql-impl.h  mai-sql-test.cc  parser-ctx.h  parser.cc  parser.h  result-set-impl.cc  result-set-impl.h  (+16 more)
src/table/: block-cache.cc  block-cache.h  block-iterator.cc  block-iterator.h  data-block-builder-test.cc  data-block-builder.cc  data-block-builder.h  filter-block-builder-test.cc  filter-block-builder.h  hash-table-builder-test.cc  hash-table-builder.cc  hash-table-builder.h  hash-table-reader.cc  hash-table-reader.h  key-bloom-filter.cc  key-bloom-filter.h  plain-block-builder.cc  plain-block-builder.h  s1-table-builder-test.cc  s1-table-builder.cc  s1-table-builder.h  s1-table-reader-test.cc  s1-table-reader.cc  s1-table-reader.h  sst-table-builder-test.cc  sst-table-builder.cc  sst-table-builder.h  sst-table-reader-test.cc  sst-table-reader.cc  sst-table-reader.h  table-builder.h  table-reader.h  table.cc  table.h  xhash-table-builder-test.cc  xhash-table-builder.cc  xhash-table-builder.h  xhash-table-reader-test.cc  xhash-table-reader.cc  xhash-table-reader.h
tests/: .gitignore
(+164 files in other folders)
